--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,7 +1,7 @@
 <div>
   <div>
     <h1>
-      List of all categories
+      All categories
     </h1>
   </div>
 </div>
@@ -35,20 +35,15 @@
   <div>
     <table border="1">
       <tr>
-        <th>
-          ID
-        </th>
 
         <th>
           Name
         </th>
-
+        <th>
+          Number of Foods
+        </th>
         <th>
           Created at
-        </th>
-
-        <th>
-          Updated at
         </th>
 
         <th>
@@ -57,19 +52,15 @@
 
       <% @list_of_categories.each do |a_category| %>
       <tr>
-        <td>
-          <%= a_category.id %>
-        </td>
 
         <td>
           <%= a_category.name %>
         </td>
-
         <td>
-          <%= time_ago_in_words(a_category.created_at) %> ago
+          <%= a_category.foods.count%>
         </td>
         <td>
-          <%= time_ago_in_words(a_category.updated_at) %> ago
+          <%= time_ago_in_words(a_category.created_at) %> ago
         </td>
 
         <td>
