--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,7 +1,7 @@
 <div>
   <div>
     <h1>
-      Category #<%= @the_category.id %> details
+      Category: <%=@the_category.name%>
     </h1>
 
     <div>
@@ -19,12 +19,6 @@
     </div>
 
     <dl>
-      <dt>
-        Name
-      </dt>
-      <dd>
-        <%= @the_category.name %>
-      </dd>
 
       <dt>
         Created at
@@ -65,6 +59,70 @@
         Update category
       </button>
     </form>
+  </div>
+</div>
+
+<hr>
+<h2>
+Foods
+</h2>
+<div>
+  <div>
+    <table border="1">
+      <tr>
+        <th>
+          ID
+        </th>
+
+        <th>
+          Image url
+        </th>
+
+        <th>
+          Name
+        </th>
+
+        <th>
+          Created at
+        </th>
+
+        <th>
+          Updated at
+        </th>
+
+        <th>
+        </th>
+      </tr>
+
+      <% @the_category.foods.each do |a_food| %>
+      <tr>
+        <td>
+          <%= a_food.id %>
+        </td>
+
+        <td>
+          <%= a_food.image_url %>
+        </td>
+
+        <td>
+          <%= a_food.name %>
+        </td>
+
+        <td>
+          <%= time_ago_in_words(a_food.created_at) %> ago
+        </td>
+        <td>
+          <%= time_ago_in_words(a_food.updated_at) %> ago
+        </td>
+
+        <td>
+          <a href="/foods/<%= a_food.id %>">
+            Show details
+          </a>
+        </td>
+      </tr>
+      <% end %>
+    </table>
   </div>
 </div>
 
