--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -1,7 +1,7 @@
 <div>
   <div>
     <h1>
-      Review #<%= @the_review.id %> details
+      Review for <%= @food.name%>
     </h1>
 
     <div>
@@ -19,25 +19,13 @@
     </div>
 
     <dl>
-      <dt>
-        Food
-      </dt>
-      <dd>
-        <%= @the_review.food_id %>
-      </dd>
-
-      <dt>
-        User
-      </dt>
-      <dd>
-        <%= @the_review.user_id %>
-      </dd>
+      <img src=<%=@food.image_url%> alt=<%=@food.name%>>
 
       <dt>
         Rating
       </dt>
       <dd>
-        <%= @the_review.rating %>
+        <%= @the_review.rating %>/10
       </dd>
 
       <dt>
@@ -75,27 +63,11 @@
 
     <form action="/modify_review/<%= @the_review.id %>"  method="post" >
       <div>
-        <label for="food_id_box">
-          Food
-        </label>
-
-        <input type="text" id="food_id_box" name="query_food_id" value="<%= @the_review.food_id %>">
-      </div>
-
-      <div>
-        <label for="user_id_box">
-          User
-        </label>
-
-        <input type="text" id="user_id_box" name="query_user_id" value="<%= @the_review.user_id %>">
-      </div>
-
-      <div>
         <label for="rating_box">
           Rating
         </label>
 
-        <input type="text" id="rating_box" name="query_rating" value="<%= @the_review.rating %>">
+        <input type="number" id="rating_box" step="1" min="1" max="10" name="query_rating" value="<%= @the_review.rating %>">
       </div>
 
       <div>
