--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -142,14 +142,15 @@ Foods
         <td>
           <%= review.description %>
         </td>
-
+<% else %>
+<td>N/A</td><td>N/A</td>
+<% end %>
         <td>
           <a href="/foods/<%= a_food.id %>">
             Show details
           </a>
         </td>
       </tr>
-      <% end %>
       <% end %>
     </table>
   </div>
