--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -67,8 +67,10 @@
           Rating
         </label>
 
-        <input type="number" id="rating_box" step="1" min="1" max="10" name="query_rating" value="<%= @the_review.rating %>">
+        <input type="number" id="rating_box" min="0" max="10" name="query_rating" value="<%= @the_review.rating %>">
       </div>
+      <input type="hidden" name="query_food_id" value="<%= @food.id%>">
+      <input type="hidden" name="query_user_id" value="<%= current_user.id%>">
 
       <div>
         <label for="description_box">
