--- a/app/views/foods/show.html.erb
+++ b/app/views/foods/show.html.erb
@@ -92,7 +92,38 @@
   </div>
 </div>
 
-<hr>
+  <div>
+  <h2>
+  Add existing food to category
+  </h2>
+    <form action="/insert_categorisation" method="post">
+      <div>
+        <label for="food_id_box">
+          Food
+        </label>
+        <input type="text" id="food_id_box" name="query_food_id" value="<%=@the_food.name%>" disabled>
+        <input type="hidden" name="query_food_id" value="<%=@the_food.id%>">
+
+      </div>
+
+      <div>
+        <label for="category_id_box">
+          Category
+        </label>
+        <select name="query_category_id", id="category_id_box">
+        <% categories = Category.all %>
+        <% categories.each do |cat| %>
+          <option value="<%= cat.id %>"><%= cat.name %></option>
+          <% end %>
+        </select>
+      </div>
+
+      <button>
+        Add food to category
+      </button>
+    </form>
+  </div>
+</div>
 <div>
   <div>
     <h2>
