--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,10 +10,12 @@
     <%= javascript_importmap_tags %>
   </head>
   <body>
+    <% if current_user != nil%>
   <a href="/">Home</a>
   <a href="/foods">Foods</a>
   <a href="/categories">Categories</a>
   <a href="/user"><%= current_user.email%></a>
+  <%end%>
   </body>
   <body>
     <%= yield %>
