set image sizes

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -127,7 +127,7 @@ Foods
       <tr>
 
         <td>
-          <img src="<%= a_food.image_url%>" alt="<%=a_food.name%>">
+          <img width="200" height="200" src="<%= a_food.image_url%>" alt="<%=a_food.name%>">
         </td>
 
         <td>
