--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -43,7 +43,7 @@
         <% food = a_review.food%>
       <tr>
         <td>
-         <img src=<%= food.image_url%> alt="<%= food.name%>">
+         <img width="200" height="200" src=<%= food.image_url%> alt="<%= food.name%>">
         </td>
 
         <td>
