set max image size

--- a/app/views/foods/show.html.erb
+++ b/app/views/foods/show.html.erb
@@ -19,7 +19,7 @@
     </div>
 
     <dl>
-      <img src=<%=@the_food.image_url%> alt=<%=@the_food.name%>>
+      <img src=<%=@the_food.image_url%> style="max-width:800px;width:100%" alt=<%=@the_food.name%>>
 
       <dt>
         Created at
