--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -19,7 +19,7 @@
     </div>
 
     <dl>
-      <img src=<%=@food.image_url%> alt=<%=@food.name%>>
+      <img src=<%=@food.image_url%> style="max-width:800px;width:100%" alt=<%=@food.name%>>
 
       <dt>
         Rating
