added link to food from home page

--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -47,7 +47,7 @@
         </td>
 
         <td>
-          <%= food.name %>
+          <a href="/foods/<%=food.id %>"><%= food.name %></a>
         </td>
 
         <td>
