added link to food from specific review page

--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -1,7 +1,7 @@
 <div>
   <div>
     <h1>
-      Review for <%= @food.name%>
+      Review for <a href="/foods/<%= @food.id %>"><%= @food.name%></a>
     </h1>
 
     <div>
